fix title flex alignment

--- a/styles/components/AdHocModal.module.less
+++ b/styles/components/AdHocModal.module.less
@@ -45,6 +45,7 @@
   width: 100%;
   padding: 22px 20px 0px 20px;
   justify-content: space-between;
+  align-self: flex-start;
 }
 
 .text {
